--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,11 @@
             </intent-filter>
         </activity>
         <provider android:name="edu.buffalo.cse.cse486586.groupmessenger2.GroupMessengerProvider"
-            android:authorities="edu.buffalo.cse.cse486586.groupmessenger2.provider" />
+            android:authorities="edu.buffalo.cse.cse486586.groupmessenger2.provider" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
